# matrix

./: CMakeLists.txt  main.cpp
inc/: linear_algebra.hpp  matrix.hpp  vector.hpp
test/: matrix_test.cpp  vector_test.cpp
